// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberItem /> should render with [canModify=true] 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon
    identicon="6be6d0a72a16cb633144ec03cdaef77804c6f94770184f83e0899fe6bdcb77ee"
  />
  bob
  <MemberItem__MemberItemIcons>
    <Icon
      color="orange"
      faStyle="fas"
      fixedWidth={false}
      name="edit"
      onClick={[Function]}
      tip="Modify"
    />
    <Icon
      color="red"
      faStyle="fas"
      fixedWidth={false}
      name="trash"
      onClick={[Function]}
      tip="Remove"
    />
  </MemberItem__MemberItemIcons>
</MemberItem__StyledMemberItem>
`;

exports[`<MemberItem /> should render with identicon 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon
    identicon="6be6d0a72a16cb633144ec03cdaef77804c6f94770184f83e0899fe6bdcb77ee"
  />
  bob
</MemberItem__StyledMemberItem>
`;

exports[`<MemberItem /> should render without identicon 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon />
  bob
</MemberItem__StyledMemberItem>
`;
